# duckdns-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  duckdns_bot.py  pyproject.toml  readme.md  requirements.txt
config/: config.json  config.json.save  logging.json  stations.json
docs/: arch.py
scripts/: run.sh
src/duckdns_bot/: __init__.py
src/logger/: __init__.py
