[tool.poetry]
name = "DuckDNS-Update-Bot"
version = "0.1.0"
description = "Retrieves gateway IP, and updates with DuckDNS if necessary"
authors = ["Timothy Holmes <tim.a.holmes@gmail.com>"]
packages = [
    {include = "duckdns_bot", from = "src"},
    {include = "logging", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
diagrams = "^0.21.1"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
